--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	
-	<h1 id ="heading">This is a heading</h1>
+	<div class="main">
+    <h1 class="heading" id="heading">This is a Heading</h1>
+</div>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
